# Luka

./: .aliases  .clang-format  .gitignore  .tmux.conf  CMakeLists.txt  CPPLINT.cfg  CUDA_BUILD_GUIDE.md  README.md  TODO.md
libs/OpenXLSX/: CMakeLists.txt
libs/yaml-cpp/src/: emitterutils.cpp
src/: main.cc
src/Calculation/: README.md  USAGE_EXAMPLES.md  actuarial_calculator.cc  actuarial_calculator.h
src/CommandProcessor/: calc_insurance_expense.cc  calc_insurance_expense.h  calc_insurance_output.cc  calc_insurance_output.h  calc_reserve_expense.cc  calc_reserve_expense.h  command_factory.h  command_processor.cc  command_processor.h  environments_command.cc  environments_command.h  read_excel.cc  read_excel.h  read_tbl.cc  read_tbl.h
src/Converter/: converter.h  excel_utils.h  string_utils.h
src/DataProcessor/: code_data_structure.cc  code_data_structure.h  data_helper.h  data_processor.h  excel_columns.h  expense_data_structure.cc  expense_data_structure.h  expense_output_data_structure.cc  expense_output_data_structure.h  insurance_output_data_structure.cc  insurance_output_data_structure.h  insurance_result_data_structure.cc  insurance_result_data_structure.h  qx_data_structure.cc  qx_data_structure.h  reserve_result_data_structure.cc  reserve_result_data_structure.h  sratio_data_structure.cc  sratio_data_structure.h  tbl_data_structure.cc  tbl_data_structure.h  termination_data_structure.cc  termination_data_structure.h
src/Environments/: environment_parser.cc  environment_parser.h  global_environment.cc  global_environment.h
src/Logger/: logger.h
src/SequenceStarter/: sequence_starter.cc  sequence_starter.h
src/Utility/: abort.h  converter.h  cuda_processor.cu  cuda_processor.h  excel_utils.h  string_utils.h  thread_pool.h
